Some more pages translated.

--- a/app/views/filter_sets/_actions.html.haml
+++ b/app/views/filter_sets/_actions.html.haml
@@ -5,7 +5,7 @@
 
     .dropdown.ui-dropdown.stick-right
       %a.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
-        Weitere Aktionen
+        = _("Further actions")
         %i.icon-arrow-down.bright.stand-alone
       %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
 
