--- a/app/views/my/favorites.html.haml
+++ b/app/views/my/favorites.html.haml
@@ -7,27 +7,27 @@
       .ui-body-title
         .ui-body-title-label
           %h1.title-xl 
-            Meine Favoriten
+            = _("My favorites")
 
         .ui-body-title-actions
 
           %a.button{:"data-create-set" => true}
             %i.icon-new-set
-            Set erstellen
+            = _("Create set")
 
           .dropdown.ui-dropdown.stick-right
             %a.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
-              Weitere Aktionen
+              = _("Further actions")
               %i.icon-arrow-down.bright.stand-alone
             %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
               %li.ui-drop-item
                 %a{:href => import_path}
                   %i.icon-upload.mid
-                  Medien importieren
+                  = _("Import media")
               %li.ui-drop-item
                 %a.ui-connect-to-visualization{:href => visualization_of_my_favorites_path, :target => "_blank", :title => "Beziehung von Inhalten als Graph visualisieren"}
                   %i.icon-vis-graph.mid
-                  Zusammenhänge anzeigen
+                  = _("Show connections")
 
     .app-body-ui-container
       .bordered.ui-container.midtone.rounded.table
