--- a/app/views/media_entries/_actions.html.haml
+++ b/app/views/media_entries/_actions.html.haml
@@ -5,11 +5,11 @@
 
     %a#ui-export-button.button
       %i.icon-dload
-      Exportieren
+      = _("Export")
 
     .dropdown.ui-dropdown.stick-right
       %a.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown", href: "#"}
-        Weitere Aktionen
+        = _("Further actions")
         %i.icon-arrow-down.bright.stand-alone
 
       %ul.dropdown-menu.dropdown-menu-progressive.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
