--- a/app/views/my/latest_imports.html.haml
+++ b/app/views/my/latest_imports.html.haml
@@ -13,7 +13,7 @@
 
           %a.button{:"data-create-set" => true}
             %i.icon-new-set
-            Set erstellen
+            = _("Create set")
 
           .dropdown.ui-dropdown.stick-right
             %a.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
@@ -23,7 +23,7 @@
               %li.ui-drop-item
                 %a{:href => import_path}
                   %i.icon-upload.mid
-                  Medien importieren
+                  = _("Import media")
 
     .app-body-ui-container
       .bordered.ui-container.midtone.rounded.table
