Done translating the 'my' directory.

--- a/app/views/my/latest_imports.html.haml
+++ b/app/views/my/latest_imports.html.haml
@@ -7,7 +7,7 @@
       .ui-body-title
         .ui-body-title-label
           %h1.title-xl 
-            Meine letzten Importe
+            = _("My latest imports")
 
         .ui-body-title-actions
 
@@ -17,7 +17,7 @@
 
           .dropdown.ui-dropdown.stick-right
             %a.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
-              Weitere Aktionen
+              = _("Further actions")
               %i.icon-arrow-down.bright.stand-alone
             %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
               %li.ui-drop-item
