--- a/app/views/my/groups.html.haml
+++ b/app/views/my/groups.html.haml
@@ -6,12 +6,13 @@
     .app-body-title
       .ui-body-title
         .ui-body-title-label
-          %h1.title-xl Meine Arbeitsgruppen
+          %h1.title-xl 
+            = _("My workgroups")
 
         .ui-body-title-actions
           %a.primary-button#create-workgroup
             %i.icon-new-group
-            Neue Arbeitsgruppe
+            = _("New workgroup")
 
     .app-body-ui-container
       .bordered.ui-container.midtone.rounded.table
@@ -23,7 +24,7 @@
           - unless @workgroups.blank?
             = render :partial => "groups/wrapper", 
                        :locals => {:groups => @workgroups, 
-                                   :title => "Arbeitsgruppen",
+                                   :title => _("Workgroups"),
                                    :as => :table,
                                    :actions => true,
                                    :resources => true,
@@ -33,7 +34,7 @@
           - unless @systemgroups.blank?
             = render :partial => "groups/wrapper", 
                        :locals => {:groups => @systemgroups, 
-                                   :title => "Systemgruppen",
+                                   :title => _("System groups"),
                                    :as => :table,
                                    :resources => true,
                                    :id => "my_systemgroups"}
@@ -42,7 +43,7 @@
           - unless @departmentgroups.blank?
             = render :partial => "groups/wrapper", 
                        :locals => {:groups => @departmentgroups, 
-                                   :title => "Abteilungsgruppen",
+                                   :title => _("Department groups"),
                                    :as => :table,
                                    :resources => true,
                                    :id => "my_departmentgroups"}
