--- a/app/views/my/keywords.html.haml
+++ b/app/views/my/keywords.html.haml
@@ -6,15 +6,16 @@
     .app-body-title
       .ui-body-title
         .ui-body-title-label
-          %h1.title-xl Meine Schlagworte
+          %h1.title-xl 
+            = _("My keywords")
 
         .ui-body-title-actions
           %a.button{:"data-create-set" => true}
             %i.icon-new-set
-            Set erstellen
+            = _("Create set")
           %a.primary-button{:href => import_path}
             %i.icon-upload.bright
-            Medien importieren
+            = _("Import media")
 
     .app-body-ui-container
       .bordered.ui-container.midtone.rounded.table
