--- a/app/views/visualization/index.html.haml
+++ b/app/views/visualization/index.html.haml
@@ -13,7 +13,7 @@
           .dropdown.ui-dropdown.stick-right
             %a.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
               %i.icon-vis-graph
-              Darstellung ändern
+                = _("Change view")
               %i.icon-arrow-down.bright.stand-alone
 
             %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
