Done translating the 'search' directory.

--- a/app/views/search/search.html.haml
+++ b/app/views/search/search.html.haml
@@ -14,7 +14,8 @@
     .app-body-title
       .ui-body-title
         .ui-body-title-label
-          %h1.title-xl Suche
+          %h1.title-xl
+            = _("Search")
 
         .ui-body-title-actions= render :partial => "login_action", :locals => {:primary => false}
 
