--- a/app/views/meta_data/_date.html.haml
+++ b/app/views/meta_data/_date.html.haml
@@ -2,4 +2,4 @@
   - if meta_datum.value.is_a? String
     = meta_datum.value
   - else
-    = _("%s Uhr") % meta_datum.value.to_formatted_s(:date_time)
+    = _("%s o'clock") % meta_datum.value.to_formatted_s(:date_time)
