--- a/app/views/meta_contexts/abstract.html.haml
+++ b/app/views/meta_contexts/abstract.html.haml
@@ -3,9 +3,10 @@
   
     .ui-container.bright.bordered.pal
       
-      %h2.title-l Diese Metadaten wurden am häufigsten vergeben
+      %h2.title-l
+        = _("These metadata were used most often")
       %h3.title-s.pbx.mbl.separated
-        Sie zeigen den thematischen Schwerpunkt dieses Kontext an.
+        = _("They show this context's area of focus")
 
       #ui-context-abstract-slider.mbl
 
