--- a/app/views/meta_contexts/vocabulary.html.haml
+++ b/app/views/meta_contexts/vocabulary.html.haml
@@ -6,12 +6,13 @@
 
       .row.separated
         .col1of2
-          %h2.title-l Für diesen Kontext wurde ein spezifisches Vokabular erstellt
+          %h2.title-l
+            = _("A specific vocabulary was created for this context")
 
         .col1of2.by-right
           %a.weak#ui-highlight-used-terms.hidden
             %i.icon-checkbox
-            Die bereits in diesem Kontext vergebenen Werte hervorheben
+            = _("Highlight values that were already used in this context")
 
       .mtl
         .pbl
