--- a/app/views/meta_contexts/_tabs.html.haml
+++ b/app/views/meta_contexts/_tabs.html.haml
@@ -1,10 +1,13 @@
 %ul.ui-tabs.large
 
   %li.ui-tabs-item{:class => context_show_page? ? "active" : ""}
-    %a{:href => context_path(@context)} Kontext
+    %a{:href => context_path(@context)}
+      = _("Context")
 
   %li.ui-tabs-item{:class => context_abstract_page? ? "active" : ""}
-    %a{:href => context_abstract_path(@context)} Auszug
+    %a{:href => context_abstract_path(@context)}
+      = _("Extract")
 
   %li.ui-tabs-item{:class => context_vocabulary_page? ? "active" : ""}
-    %a{:href => context_vocabulary_path(@context)} Vokabular
+    %a{:href => context_vocabulary_path(@context)}
+      = _("Vocabulary")
