Done translating the 'media_sets' directory.

--- a/app/views/media_sets/_highlights.html.haml
+++ b/app/views/media_sets/_highlights.html.haml
@@ -1,7 +1,8 @@
 .ui-container.midtone-darker.bordered
   .ui-container.inverted.ui-toolbar.phs.pvx
     %h2.ui-toolbar-header
-      %strong Hervorgehobene Inhalte
+      %strong
+        = _("Highlighted content")
 
   .ui-featured-entries
     %ul.ui-featured-entries-list.pal
