--- a/app/views/media_sets/abstract.html.haml
+++ b/app/views/media_sets/abstract.html.haml
@@ -4,9 +4,10 @@
 
     .bright.ui-container.pal.rounded-bottom
 
-      %h2.title-l Diese Metadaten wurden am häufigsten vergeben
+      %h2.title-l 
+        = _("These metadata were used most often")
       %h3.title-s.pbx.mbl.separated
-        Sie zeigen den thematischen Schwerpunkt dieses Sets an.
+        = _("They show this set's area of focus")
 
       #ui-media-set-abstract-slider.mbl
 
