--- a/app/views/media_sets/parents.html.haml
+++ b/app/views/media_sets/parents.html.haml
@@ -5,9 +5,7 @@
     .bright.ui-container.pal.rounded-bottom
 
       %h2.title-l.separated.mbl
-        = "Dieses Set ist in"
-        = pluralize @parents.count, "Set", "Sets"
-        = "enthalten"
+        = n_("This set is contained in one set", "This set is contained in %d sets" % @parents.count, @parents.count)
 
       = render :partial => "media_resources/wrapper",
                :locals => {:media_resources => @parents,
