--- a/app/views/media_resources/_plain.html.haml
+++ b/app/views/media_resources/_plain.html.haml
@@ -1,4 +1,5 @@
 .app-body.ui-container
   .ui-body-title
     .ui-body-title-label
-      %h1.title-xl List of Media Resources
+      %h1.title-xl 
+        = _("List of media resources")
