--- a/app/views/media_resources/index.html.haml
+++ b/app/views/media_resources/index.html.haml
@@ -18,7 +18,7 @@
               
             %a.primary-button{:href => import_path}
               %i.icon-upload.bright
-              Medien importieren
+              = _("Import media")
 
     .app-body-ui-container
 
