--- a/app/views/media_resources/_media_resource.html.haml
+++ b/app/views/media_resources/_media_resource.html.haml
@@ -17,9 +17,9 @@
     .ui-resource-head
       %ul.ui-resource-actions
         %li.ui-resource-action
-          %a.ui-thumbnail-action-checkbox{:"data-clipboard-toggle" => true, :title => "Zur Zwischenablage hinzufügen/entfernen"} Select
+          %a.ui-thumbnail-action-checkbox{:"data-clipboard-toggle" => true, :title => _("Add to/remove from clipboard")} Select
         %li.ui-resource-action
-          %a.ui-thumbnail-action-favorite{:"data-favor-toggle" => true, :title => "Zur Favoriten hinzufügen/entfernen"} Favorite
+          %a.ui-thumbnail-action-favorite{:"data-favor-toggle" => true, :title => _("Add to/remove from favorites")} Favorite
       %h3.ui-resource-title
         = media_resource.title
   .ui-resource-body
