--- a/app/views/media_resources/_privacy.html.haml
+++ b/app/views/media_resources/_privacy.html.haml
@@ -1,7 +1,10 @@
 .ui-thumbnail-privacy
   - if media_resource.is_public?
-    %i.icon-privacy-open{:title => "Diese Inhalte sind öffentlich zugänglich"} Diese Inhalte sind öffentlich zugänglich
+    %i.icon-privacy-open{:title => _("These items are publicly accessible")}
+      = _("These items are publicly accessible")
   - elsif media_resource.is_private? current_user
-    %i.icon-privacy-private{:title => "Diese Inhalte sind nur für Sie zugänglich"} Diese Inhalte sind nur für Sie zugänglich
+    %i.icon-privacy-private{:title => _("These items are only accesible to you")}
+      = _("These items are only accesible to you")
   - elsif media_resource.is_shared? current_user
-    %i.icon-privacy-group{:title => "Diese Inhalte werden mit Anderen geteilt"} Diese Inhalte werden mit Anderen geteilt
+    %i.icon-privacy-group{:title => "Diese Inhalte werden mit Anderen geteilt"}
+      = _("These items are shared with others")
