--- a/app/views/media_resources/actions/_browse.html.haml
+++ b/app/views/media_resources/actions/_browse.html.haml
@@ -1,4 +1,4 @@
 %li.ui-drop-item
-  %a{:title => "Nach vergleichbaren Inhalten stöbern", :href => browse_media_resource_path(@media_entry.id)}
+  %a{:title => _("Browse for similar content"), :href => browse_media_resource_path(@media_entry.id)}
     %i.icon-eye.mid
-    Stöbern
+    = _("Browse")
