--- a/app/views/media_resources/actions/_clipboard_toggle.html.haml
+++ b/app/views/media_resources/actions/_clipboard_toggle.html.haml
@@ -1,2 +1,2 @@
-%a.button{:title => "Zur Zwischenablage hinzufügen/entfernen", :"data-clipboard-toggle" => true}
+%a.button{:title => _("Add to/remove from clipboard"), :"data-clipboard-toggle" => true}
   %i.mvx.ui-thumbnail-action-checkbox
