--- a/app/views/media_resources/actions/_delete.html.haml
+++ b/app/views/media_resources/actions/_delete.html.haml
@@ -1,4 +1,4 @@
 %li.ui-drop-item
-  %a{:title => "Unwiederbringlich löschen", :"data-delete-action" => true}
+  %a{:title => _("Delete"), :"data-delete-action" => true}
     %i.icon-trash.mid
-    Löschen
+    = _("Delete")
