--- a/app/views/media_resources/actions/_organize.html.haml
+++ b/app/views/media_resources/actions/_organize.html.haml
@@ -1,4 +1,4 @@
 %li.ui-drop-item
   %a{:"data-organize-arcs" => true}
     %i.icon-move.mid
-    Zu Set hinzufügen/entfernen
+    = _("Add to/remove from set")
