--- a/app/views/media_resources/list/_filterbar.html.haml
+++ b/app/views/media_resources/list/_filterbar.html.haml
@@ -2,9 +2,9 @@
   .left.col2of6
     %a.button#ui-side-filter-toggle{:class => params[:filterpanel] ? "active" : ""}
       %i.icon-sidebar
-      Filtern
+      = _("Filter")
     %a#ui-side-filter-reset.mlx.hidden
-      Alle Filter zurücksetzen
+      = _("Reset filters")
   .col2of6.by-center
     #ui-resources-type-filter.button-group
       %a.button{:"data-type" => nil, :class => (params[:type].nil?) ? "active" : ""} Alle
@@ -12,6 +12,8 @@
       %a.button{:"data-type" => "media_sets", :class => (params[:type] == "media_sets") ? "active" : ""} Sets
   .col2of6.by-right
     %label#ui-clipboard-select-all.weak.disabled.ui-filterbar-select
-      %span.active Alle abwählen
-      %span.inactive Alle auswählen
+      %span.active
+        = _("Deselect all")
+      %span.inactive
+        = _("Select all")
       %i.icon-checkbox
