Language was the wrong way round.

--- a/app/views/media_resources/edit/fields/_meta_datum_date.html.haml
+++ b/app/views/media_resources/edit/fields/_meta_datum_date.html.haml
@@ -6,7 +6,7 @@
       %option{:"data-input" => ".input-on"}
         = _("on")
       %option{:"data-input" => ".input-from-to"}
-        = _("von/bis")
+        = _("from/to")
 
 .form-date.input-free
   .col2of3
