Fixing syntax error.

--- a/app/views/media_resources/list/_toolbar.html.haml
+++ b/app/views/media_resources/list/_toolbar.html.haml
@@ -31,7 +31,7 @@
     #ui-resources-layout-switcher.button-group.tertiary.small.right.mls
       %a.button.ui-toolbar-vis-button{:class => active_layout == "miniature" ? "active" : "", :title => _("Miniature view"), :"data-vis-mode" => "miniature"}
         %i.ui-toolbar-icon-miniature
-          = _("Miniature view)"
+          = _("Miniature view")
       %a.button.ui-toolbar-vis-button{:class => active_layout == "grid" ? "active" : "", :title => _("Grid view"), :"data-vis-mode" => "grid", :"data-default" => true}
         %i.ui-toolbar-icon-grid
           = _("Grid view")
