--- a/app/views/media_resources/list/_filter.html.haml
+++ b/app/views/media_resources/list/_filter.html.haml
@@ -2,7 +2,7 @@
 
   #ui-side-filter-search.ui-side-filter-search.filter-search
     %form#search_form
-      %input.unstyled{:type => 'submit', :value => _("Limit by keyword)"}
+      %input.unstyled{:type => 'submit', :value => _("Limit by keyword")}
       %input#search_term.block.ui-filter-search-input{:type => "text", :value => params[:search], :name => 'search'}
       
 
