Configurable main-color
Squashed commit of the following:

commit 826775fae1ba2ae966354532aa6c0110dcc6170a
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Apr 29 14:30:17 2013 +0200

    Using config/colors_default.yml

commit 6ce3702d245d01120b345a879733e60c5213ebad
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Apr 29 09:22:29 2013 +0200

    Deleted test color config

commit 4a872ce43b4201692a23659e4d471424c73e5ca6
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Apr 16 15:09:36 2013 +0200

    Color config with pink example

commit 8fe31b5d01a5abb162c484bd435c1eca15f11105
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Apr 16 14:47:18 2013 +0200

    Load color config

--- a/app/assets/stylesheets/combos/_ui-clipboard.scss
+++ b/app/assets/stylesheets/combos/_ui-clipboard.scss
@@ -27,7 +27,7 @@
 }
 .ui-clipboard-counter {
   @include border-radius(100px);
-  @include background-image(linear-gradient($green, $green-dark));
+  @include background-image(linear-gradient($main-color, $main-color-dark));
   background-color: $red;
   font-size: $font-xs;
   font-weight: 700;
