--- a/app/assets/stylesheets/visualization/drawing.sass
+++ b/app/assets/stylesheets/visualization/drawing.sass
@@ -35,9 +35,9 @@ html#visualization
 
       .node.MediaEntry
         circle
-          fill: lighten($green,20%)
+          fill: lighten($main-color,20%)
           &.origin
-            fill: lighten($green,20%)
+            fill: lighten($main-color,20%)
             stroke: black
 
 
