--- a/app/assets/stylesheets/_config.scss
+++ b/app/assets/stylesheets/_config.scss
@@ -1,3 +1,5 @@
+@import "color_config";
+
 /**
  *
  * ## Asset Configuration
@@ -46,11 +48,8 @@ $grey-light:          #E7E7E7;
 $grey-lighter:        #F3F3F3;
 $brightest:           #fff;
 
-// Green Shades
-$green:               #7A9D29;
-$green-dark:          darken($green, 10%);
-$green-light:         lighten($green, 10%);
 
+$green:               #7A9D29;
 // Feedback colour rainbow
 $red:                 #B63A52;
 $blue:                #3A91B6;
