--- a/app/assets/stylesheets/general/_buttons.scss
+++ b/app/assets/stylesheets/general/_buttons.scss
@@ -12,7 +12,7 @@
 a {
   text-decoration: none;
   cursor: pointer;
-  color: $green;
+  color: $main-color;
   &:hover {
     text-decoration: underline;
   }
@@ -183,19 +183,19 @@ a:active {
 
 .primary-button {
   @extend .button;
-  @include background-image(linear-gradient($green-light, $green));
+  @include background-image(linear-gradient($main-color-light, $main-color));
   @include single-text-shadow(false, 1px, 0, false, $darken);
-  background-color: $green;
-  border: 1px solid $green-dark;
+  background-color: $main-color;
+  border: 1px solid $main-color-dark;
   color: darken($brightest, 5%);
 }
 
 // Hover state
 .primary-button:hover {
-  @include background-image(linear-gradient(lighten($green-light, 3%), lighten($green, 3%)));
+  @include background-image(linear-gradient(lighten($main-color-light, 3%), lighten($main-color, 3%)));
   @include single-text-shadow(false, 1px, 0, false, $darken);
-  background-color: lighten($green, 3%);
-  border-color: darken($green-dark, 3%);
+  background-color: lighten($main-color, 3%);
+  border-color: darken($main-color-dark, 3%);
   color: $brightest;
 }
 
@@ -203,9 +203,9 @@ a:active {
 .primary-button:active,
 .primary-button.active {
   @include box-shadow($darken 0 1px 3px inset);
-  @include background-image(linear-gradient(darken($green-light, 10%), darken($green, 10%)));
+  @include background-image(linear-gradient(darken($main-color-light, 10%), darken($main-color, 10%)));
   @include single-text-shadow(false, -1px, 0, false, $darken);
-  border-color: darken($green-dark, 5%);
+  border-color: darken($main-color-dark, 5%);
   color: darken($brightest, 20%);
   outline: 0;
 }
