AppAdmin UI improvements
Squashed commit of the following:

commit 9d9999a77eebdfebfe3e5ba98d506b4702d6d588
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Apr 29 15:33:44 2013 +0200

    Minor adjustment in app_admin interface

commit 645cb4632eaa075be836e67f4b09e57f5394b68a
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Apr 29 15:31:02 2013 +0200

    More consistent app_admin interface

commit 6ed860b28ed40120bbfba49d694144fad0cc4fc0
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Apr 29 15:03:11 2013 +0200

    Added stats and linking to new app_admin interface

--- a/app/views/app_admin/dashboard/index.html.haml
+++ b/app/views/app_admin/dashboard/index.html.haml
@@ -1,8 +1,44 @@
-
 %h1 
   %i.icon-dashboard
   Dashboard
 
+
+%p.alert.alert-warning
+  We are revamping the administration interface.
+  Some of the missing functionality might be still accessible in the 
+  = link_to '/admin' do
+    old administration interface.
+
+
+%h2 Stats
+
+%table.table.table-striped
+  %thead
+  %tbody
+    %tr 
+      %td #{User.count} Nutzer/innen
+    %tr
+      %td #{Keyword.joins(:meta_datum => :media_resource).where(:media_resources => {:type => ["MediaEntry", "MediaSet", "FilterSet"]}).count} Schlagworte
+    %tr
+      %td #{MediaEntry.count} Medien
+    %tr
+      %td #{MediaSet.count} MediaSets
+    %tr 
+      %td=  MediaFile.where("NOT EXISTS (#{MediaEntry.where('media_file_id = media_files.id').to_sql})").count.to_s + " MediaFiles without MediaEntry"
+
+
+      
+
+
+
+
+
+
+
+
+%h2 Movie re-encoding
+
+%p (to be removed)
 
 %h3 
   %i.icon-film
