--- a/app/views/app_admin/groups/index.html.haml
+++ b/app/views/app_admin/groups/index.html.haml
@@ -16,7 +16,7 @@
         = text_field nil, :fuzzy_search, class: "search-query", value: params[:fuzzy_search] 
 
       = button_tag type: 'submit', class: 'btn btn-small' do
-        Apply
+        Filter
 
   .span9
     %table.table.table-striped
