--- a/app/views/app_admin/people/index.html.haml
+++ b/app/views/app_admin/people/index.html.haml
@@ -24,7 +24,7 @@
         With meta data
 
       = button_tag type: 'submit', class: 'btn btn-small' do
-        Apply
+        Filter
 
   .span9
     %table.table.table-striped
