--- a/app/views/app_admin/zencoder_jobs/_zencoder_job.html.haml
+++ b/app/views/app_admin/zencoder_jobs/_zencoder_job.html.haml
@@ -9,5 +9,5 @@
   %td
     = link_to app_admin_zencoder_job_path(zencoder_job), class: "btn btn-mini" do
       %i.icon-eye-open
-      Show
+      Details
 
