--- a/app/views/app_admin/media_files/_media_file.html.haml
+++ b/app/views/app_admin/media_files/_media_file.html.haml
@@ -12,5 +12,5 @@
   %td
     = link_to app_admin_media_file_path(media_file) , class: 'btn btn-mini' do
       %i.icon-eye-open
-      Show
+      Details
 
