--- a/app/views/app_admin/media_files/index.html.haml
+++ b/app/views/app_admin/media_files/index.html.haml
@@ -26,7 +26,7 @@
         Incomplete encoded videos
 
       = button_tag type: 'submit', class: 'btn btn-small' do
-        Apply
+        Filter
      
 
 
