--- a/app/views/app_admin/zencoder_jobs/index.html.haml
+++ b/app/views/app_admin/zencoder_jobs/index.html.haml
@@ -17,7 +17,7 @@
         = text_field nil, :fuzzy_search, class: "search-query", value: params[:fuzzy_search] 
 
       = button_tag type: 'submit', class: 'btn btn-small' do
-        Apply
+        Filter
 
   .span9
 
