--- a/app/views/application/header/_user.html.haml
+++ b/app/views/application/header/_user.html.haml
@@ -23,7 +23,7 @@
           Medien importieren
       - if current_user and current_user.groups.is_member?("Admin")
         %li.ui-drop-item
-          %a.strong{:href => admin_root_path}
+          %a.strong{:href => app_admin_root_path}
             %i.icon-admin.ui-drop-icon
             Admin
       %li.ui-drop-item
