--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -42,7 +42,7 @@
             %li.dropdown
               %a.dropdown-toggle{href: "#", data: {toggle: 'dropdown'}} 
                 %i.icon-user
-                Users and Groups
+                Users &amp; Groups
                 %b.caret
               %ul.dropdown-menu
                 %li
