--- a/app/views/app_admin/zencoder_jobs/_zencoder_job.html.haml
+++ b/app/views/app_admin/zencoder_jobs/_zencoder_job.html.haml
@@ -1,6 +1,6 @@
 
 %tr
-  %td= zencoder_job.state
+  %td.state= zencoder_job.state
   %td
     = link_to app_admin_media_file_path(zencoder_job.media_file) do
       %i.icon-file-alt
