--- a/app/views/app_admin/previews/_preview.html.haml
+++ b/app/views/app_admin/previews/_preview.html.haml
@@ -1,14 +1,15 @@
 %tr
   %td
-    =link_to app_admin_preview_path(preview) do
-      = app_admin_preview_path(preview)
-  %td
     = preview.content_type
   %td
     = preview.thumbnail
   %td
     = preview.created_at
   %td
+    = link_to app_admin_preview_path(preview), class: "btn btn-mini" do
+      %i.icon-eye-open
+      Details
+
     = link_to app_admin_preview_path(preview), method: 'DELETE', confirm: "Really delete prview", class: "btn btn-mini btn-danger" do
       %i.icon-trash
       Delete
