--- a/app/views/app_admin/previews/show.html.haml
+++ b/app/views/app_admin/previews/show.html.haml
@@ -3,6 +3,14 @@
   = @preview.id
 
 
+%ul.inline
+  %li
+    = link_to app_admin_preview_path(@preview), method: 'DELETE', class: "btn btn-danger" do
+      %i.icon-trash
+      Delete
+
+
+
 %table.table.table-striped
   %thead
   %tbody
