--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -41,6 +41,17 @@
 
             %li.dropdown
               %a.dropdown-toggle{href: "#", data: {toggle: 'dropdown'}} 
+                Media Resources
+                %b.caret
+              %ul.dropdown-menu
+                %li
+                  = link_to app_admin_media_entries_path do
+                    %i.icon-file
+                    Media Entries
+
+
+            %li.dropdown
+              %a.dropdown-toggle{href: "#", data: {toggle: 'dropdown'}} 
                 %i.icon-user
                 Users &amp; Groups
                 %b.caret
