--- a/app/views/media_entries/actions/_admin.html.haml
+++ b/app/views/media_entries/actions/_admin.html.haml
@@ -1,4 +1,4 @@
 %li.ui-drop-item
-  %a{:href => admin_media_entry_path(@media_entry)}
+  %a{:href => app_admin_media_entry_path(@media_entry)}
     %i.icon-admin.mid
     MediaEntry in the Admin Interface
