--- a/app/views/media_entries/previews/encoding/_failed.html.haml
+++ b/app/views/media_entries/previews/encoding/_failed.html.haml
@@ -1,6 +1,6 @@
 .ui-alert.error
   Konvertierung fehlgeschlagen.
-  Bitte kontaktieren Sie einen Administrator. 
+  Bitte kontaktieren Sie den Support.
 
 .p.pvh.mth
   %p The encoder reports: 
