--- a/app/views/media_resources/list/_toolbar.html.haml
+++ b/app/views/media_resources/list/_toolbar.html.haml
@@ -43,7 +43,7 @@
         %span.ui-text
           - case active_sorting
             - when "created_at"
-              = _("Order by creation date")
+              = _("Order by date of import")
             - when "updated_at"
               = _("Order by modification date")
             - when "title"
